Upgrade parseq module to Java 17
This commit implements a complete Java 17 upgrade for the parseq module:

Build Tool Upgrades:
- Upgrade Gradle wrapper from 6.3 to 8.5 for Java 21 compatibility
- Update Shadow plugin from 2.0.4 to 8.1.1
- Update JFrog Artifactory plugin from 4.32.0 to 5.1.14
- Remove deprecated 'maven' plugin and uploadArchives task
- Migrate deprecated Gradle APIs (compile -> api/implementation, testCompile -> testImplementation)

Code Changes:
- Fix deprecated Class.newInstance() in Engine.java
- Migrate Jackson from org.codehaus.jackson 1.8.8 to com.fasterxml.jackson 2.16.1
- Update JsonTraceCodec, JsonTraceSerializer, JsonTraceDeserializer for Jackson 2.x API

Dependency Updates:
- Guava: 30.1.1-jre -> 32.1.3-jre (CVE fixes)
- SLF4J: 1.7.25 -> 2.0.9
- TestNG: 6.9.9 -> 7.9.0
- JUnit Jupiter: 5.5.1 -> 5.10.1

Test Fixes:
- Update JUnit imports to TestNG in TestCachedLoggerFactory
- Add reload4j for Log4j 1.x API compatibility in tests
- Fix TestNG 7.x parameter injection issue in AbstractTaskTest

CI/CD Updates:
- Update GitHub Actions workflows to use Java 17

All 529 tests pass successfully.

Co-Authored-By: johnny.vaquiz@gmail.com <johnny.vaquiz@gmail.com>